# model-garden-agent

./: .gitignore  README.md  pyproject.toml
src/model_garden_agent/: .env.example  agent.py  deploy_model_agent.py  model_discovery_agent.py  model_inference_agent.py  requirements.txt  setup_recommendation_agent.py
